# scout_odometry

./: .gitignore  README.md
src/project1/: CMakeLists.txt  package.xml
src/project1/cfg/: integration.cfg
src/project1/include/project1/: robot_constants.h
src/project1/launch/: launcher.launch
src/project1/msg/: CustomMessage.msg
src/project1/rviz/: odom_gtpose_comparison.rviz  odom_to_baselink.rviz
src/project1/src/: odom_to_baselink_tf.cpp  odometry.cpp  reset_pose_client.cpp  set_pose_client.cpp  setup_calibration.cpp  velocity_publisher.cpp
src/project1/srv/: SetPoseService.srv
