<?xml version="1.0"?>
<package format="2">

  <name>project1</name>
  <version>0.0.0</version>
  <description>The project1 package</description>

  <maintainer email="leonardo.gargani@mail.polimi.it">Leonardo Gargani</maintainer>
  <maintainer email="alberto.maggioli@mail.polimi.it">Alberto Maggioli</maintainer>
  <maintainer email="lorenzo.poretti@mail.polimi.it">Lorenzo Poretti</maintainer>

  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
  </export>

</package>
